--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -11,8 +11,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Install dependencies
-        run: sudo apt-get install -y tar
+        run: |
+          sudo apt-get install -y tar
+          npm install @actions/http-client
 
       - name: Check releases
         uses: actions/github-script@v5
@@ -20,6 +27,8 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const fs = require('fs');
+            const httpm = require('@actions/http-client');
+            const httpc = new httpm.HttpClient('download-asset');
             const { owner, repo } = context.repo
             const releases = await github.rest.repos.listReleases({ owner, repo })
             
@@ -37,15 +46,9 @@ jobs:
                 if (imgAsset && !hasTar) {
                   console.log(`Release ${release.name} has recovery.img but not recovery.tar`)
                   const path = `./${imgAsset.name}`
-                  const arrayBuffer = Buffer.from((await github.rest.repos.downloadReleaseAsset({
-                    owner,
-                    repo,
-                    asset_id: imgAsset.id,
-                    headers: {
-                      accept: "application/octet-stream",
-                    },
-                  })).data)
-                  fs.writeFileSync(path, arrayBuffer)
+                  const response = await httpc.get(imgAsset.url);
+                  const arrayBuffer = await response.readBody();
+                  fs.writeFileSync(path, arrayBuffer, 'binary');
                   
                   const { execSync } = require('child_process');
                   execSync(`tar -cvf recovery.tar ${imgAsset.name}`);
